test/Fail/Issue3483.agda
open import Agda.Primitive public using (lzero)

{-# BUILTIN LEVELZERO lzero #-}

