test/Fail/Issue3483.err
Issue3483.agda:3.1-32: error: [DuplicatePrimitiveBinding]
Duplicate binding for primitive thing primLevelZero, previous
binding to lzero
when checking the pragma BUILTIN LEVELZERO lzero
